<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/base_title_bar" />

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_hight_m"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/lightgray"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="名称" />

            <EditText
                android:id="@+id/name_etv"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/white"
                android:paddingLeft="2dp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/select_color_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_layout"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/chose_color" />

            <GridView
                android:id="@+id/color_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:numColumns="5"
                android:scrollbars="none" 
                >
            </GridView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/period_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_hight_m"
            android:layout_below="@id/select_color_layout"
            android:background="@color/lightgray"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|left"
                android:text="@string/repeat_string"
                android:textSize="14sp" />
        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/chose_day_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_hight_m"
            android:layout_below="@id/period_layout"
            android:background="@color/lightgray"
            android:orientation="horizontal"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical" >

                <CheckBox
                    android:id="@+id/cb_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/_1" />

                <CheckBox
                    android:id="@+id/cb_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/_2" />

                <CheckBox
                    android:id="@+id/cb_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/_3" />

                <CheckBox
                    android:id="@+id/cb_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/_4" />

                <CheckBox
                    android:id="@+id/cb_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/_5" />

                <CheckBox
                    android:id="@+id/cb_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/_6" />

                <CheckBox
                    android:id="@+id/cb_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/_7" />
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="46dp"
            android:background="@drawable/button_selector"
            android:text="取消"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_above="@+id/btn_cancel"
            android:layout_alignLeft="@+id/btn_cancel"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_selector"
            android:text="确定"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_add"
            android:layout_below="@id/chose_day_layout"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/remind_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_hight_m"
            android:layout_below="@id/chose_day_layout"
            android:background="@color/lightgray"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/remind_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|left"
                android:padding="5dp"
                android:text="选择提醒时间"
                android:textColor="@color/red"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/remind_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|left"
                android:padding="5dp"
                android:text="选择提醒时间"
                android:textColor="@color/red"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>